04-clustered-pingaccess/pingaccess-engine.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingaccess-engine
  labels:
    role: pingaccess
    tier: engine
spec:
  ports:
    - port: 3000
      name: https
  selector:
    role: pingaccess
    tier: engine
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingaccess
  labels:
    role: pingaccess
    tier: engine
spec:
  replicas: 1
  selector:
    matchLabels:
      role: pingaccess
      tier: engine
  template:
    metadata:
      name: pingaccess
      labels:
        role: pingaccess
        tier: engine
    spec:
      containers:
      - name: pingaccess
        image: pingidentity/pingaccess:5.3.2-edge-rbs
        #image: pingidentity/pingaccess:6.1.0-edge
        #image: pingidentity/pingaccess:edge
        ports:        
        - containerPort: 3000
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - /opt/liveness.sh
          periodSeconds: 10
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - /opt/liveness.sh
          initialDelaySeconds: 100
          periodSeconds: 30
